--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,58 @@
 #root {
-  max-width: 1280px;
+  width: 300px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container h1 {
+  font-size: 28px;
+  margin-bottom: 5px;
+  font-weight: bold
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.container .iconos {
+  display: flex;
+  gap: 15px;
+  margin: 5px;
 }
 
-.card {
-  padding: 2em;
+.container .iconos .subIcono {
+  border-radius: 50%;
+  padding: 4px 10px;
+  border: solid 1px;
+  font-size: 1.2em;
+  cursor: pointer;
 }
 
-.read-the-docs {
-  color: #888;
+.container p {
+  font-size: 12px;
+  margin-bottom: 8px;
+}
+
+.container form {
+  width: 100%;
+}
+
+.container form button {
+  border-radius: 4px;
+  color: aliceblue;
+  border-radius: 4px;
+  width: 100%;
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+.container .alert {
+  width: 100%;
+  margin: 0;  
+  padding: 10px;
+  font-size: 12px;
 }
